--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -185,3 +185,43 @@
   adress={Oxford},
   publisher={Oxford University Press}
 }
+
+@article{bresnan1978,
+  title = {The Syntax of Free Relatives in English},
+  volume = {9},
+  number = {2},
+  journal = {Linguistic Inquiry},
+  author = {Bresnan, Joan and Grimshaw, Jane},
+  year = {1978},
+  pages = {331-391}
+}
+
+@inproceedings{groos1981,
+  address = {Pisa},
+  title = {Matching Effects in Free Relatives: A Parameter of Core Grammar},
+  booktitle = {Theory of Markedness in Generative Grammar},
+  publisher = {{Scuola Normale Superiore}},
+  author = {Groos, Anneke and {van Riemsdijk}, Henk},
+  editor = {Adriana Belletti, Luciana Brandi and Rizzi, Luigi},
+  year = {1981}
+}
+
+@article{citko2005,
+  title = {On the Nature of Merge: External Merge, Internal Merge, and Parallel Merge},
+  volume = {36},
+  number = {4},
+  journal = {Linguistic Inquiry},
+  author = {Citko, Barbara},
+  year = {2005},
+  pages = {475-496}
+}
+
+@article{grosu1996,
+  title = {The Proper Analysis of ``Missing-P'' Free Relative Constructions},
+  volume = {27},
+  number = {2},
+  journal = {Linguistic Inquiry},
+  author = {Grosu, Alexander},
+  year = {1996},
+  pages = {257-293}
+}
