--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -13,11 +13,33 @@ In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat
 
 In this section I show the behavior of Gothic headless relatives in detail. I systematically go through all case combinations, except for the genitive, which I discuss in Section \ref{sec:genitive}. This leaves the nominative, accusative and dative.
 
+
+
+
 I repeat the headless relative from the introduction in which both predicates assign accusative case in \ref{ex:gothicaccaccrep}. The predicate in the relative clause \tit{arma} `pity' assigns accusative case. The predicate in the main clause \tit{gaarma} `pity' also assigns accusative case. The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.
 
 \exg. gaarma þan -ei arma\\
  pity\scsub{[acc]} \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{pity\scsub{[acc]}}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+
+
+
+
+
+ Before I discuss evidence for this claim, let me lay out three some terminology and notational conventions I use throughout this dissertation. I use them to make examples and tables as easy to understand as possible, and to allow to avoid long and complicated phrasing.
+
+ First, discussing headless relatives, I use the terms internal and external case.
+ Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothicaccacc}, the relative pronoun is the object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
+ External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothicaccacc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothicaccacc}, the external case is accusative.
+
+ Second, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case.
+ For \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in.
+
+ Third and last, for ease of exposition, I write the relative clause in gray, as in \ref{ex:gothicaccacc}.
+
+
+
+
 
 % From this section on I use the terms internal case and external case. Internal case refers to the case assigned internal to the relative clause. In \ref{ex:gothicaccaccrep}, the internal case is assigned by \tit{arma} `pity'. The external case refers to the case assign external to the relative clause, so the main clause. In \ref{ex:gothicaccaccrep}, the external case is assigned by \tit{gaarma} `pity'.
 %
@@ -84,7 +106,13 @@ First, consider a situation in which the internal case is nominative and the ext
  and what.\ac{acc} \tcol{DG}{-\ac{comp}} \tcol{DG}{is\scsub{[nom]}} \tcol{DG}{from} \tcol{DG}{Laodicea} you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}\label{ex:gothicnomacc}
 
-Consider a situation in which the internal case is nominative and the external case is dative. An attested example of that is given in  \ref{ex:gothicnomdat}. Internal to the relative clause, the predicate \tit{iupa sind} `are above' requires a subject in nominative case. External to the relative clause, \tit{fraþjaiþ} `think on' requires its object to be in dative. In the example, the relative pronoun \tit{þaim} `what.\tsc{dat}' appears in dative case. There are no examples of headless relatives with nominative as internal case and dative as external case and a relative pronoun in nominative.
+% Consider a situation in which the internal case is nominative and the external case is dative. An attested example of that is given in  \ref{ex:gothicnomdat}. Internal to the relative clause, the predicate \tit{iupa sind} `are above' requires a subject in nominative case. External to the relative clause, \tit{fraþjaiþ} `think on' requires its object to be in dative. In the example, the relative pronoun \tit{þaim} `what.\tsc{dat}' appears in dative case. There are no examples of headless relatives with nominative as internal case and dative as external case and a relative pronoun in nominative.
+
+Consider the example in \ref{ex:gothicnomdat}. The relative clause is marked in gray.
+The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject, as indicated by the subscript on the predicate.
+The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative objects, indicated by the subscript on the verb.
+The relative pronoun \tit{þaim} appears in dative. This dative can only come from the predicate \tit{fraþjaiþ} `think on'.
+There are no attested examples of headless relatives with the nominative as internal case and the dative as external case in which the relative pronoun appears in nominative case.
 
 \exg. þaim -ei iupa sind fraþjaiþ \\
  what.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{above} \tcol{DG}{are\scsub{[nom]}} {think on}\scsub{[dat]}\\
