--- a/introduction.tex
+++ b/introduction.tex
@@ -30,67 +30,71 @@ The grammatical roles of the noun phrases in \ref{ex:germancase} can also be der
  the.\ac{nom} student likes the.\ac{acc}\\
  `the pupil likes the teacher.'\label{ex:germancase2}
 
-Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both contain of a main clause that is modified by a relative clause. The glosses of the relative clause are marked in gray.
+Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both contain of a main clause that is modified by a relative clause.
 In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the subject of in the relative clause.
 
 In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:germanrelatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
- the.\ac{nom} teacher likes the.\ac{acc} student \tcol{DG}{that.\ac{nom}} \tcol{DG}{to} \tcol{DG}{outside} \tcol{DG}{looks}\\
+ the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
  `The teacher likes the pupil that is looking outside.'\label{ex:germanrelative1}
  \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
- the.\ac{nom} teacher likes the.\ac{acc} student \tcol{DG}{that.\ac{acc}} \tcol{DG}{he} \tcol{DG}{{at the}} \tcol{DG}{{hide-and-seek game}} \tcol{DG}{searches}\\
+ the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he at the {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
 
 Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head.
 
-The focus of this dissertation lies on the headless relative, i.e. a relative clause that does not have a head. As the name suggests, this type of relative clause lacks a head.\footnote{
-This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
+The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
+This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu1996}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. The relative clause is \tit{þan -ei arma} `who I pity'. There is no head that this relative clause modifies, it is a headless relative. This is different from the examples from German I gave above, which each had a head.
+I give an example of a headless relative in Gothic in \ref{ex:gothicaccacc}. The relative clause is \tit{þan -ei arma} `who I pity', marked in gray. There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
 The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-\exg. gaarma þan -ei arma\\
- pity\scsub{[acc]} \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{pity\scsub{[acc]}}\\
+\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
+Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarma} `pity', the predicate in the relative clause \tit{arma} `pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
 
-%%%probeer dit hieronder aan elkaar te lullen%%%
+Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothicaccacc}, the relative pronoun is the object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
 
- Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothicaccacc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothicaccacc}, the external case is accusative.
 
- - Discussing headless relatives, I use the terms internal and external case. Internal case refers to the case associated with the grammatical role the relative pronoun has internal to the relative clause. External case refers to the case associated with the grammatical role the non-existing head of the relative pronoun has external to the relative clause, so in the main clause. The question is what happens with this case. Is it lost because the noun is simply not there or does it go somewhere else?
+Now I return to the question where \tit{þan(a)} in \ref{ex:gothicaccacc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case. In other words, there is case competition going on in headless relatives. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
- - I places subscripts on the glosses of the predicates. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
+Consider the example in \ref{ex:gothicaccdat}. The relative clause \tit{ana þammei lag} `on which he lay' is marked in gray.
+The internal case is dative. The preposition \tit{ana} `on' takes dative objects, as indicated by the subscript on the preposition.
+The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects, indicated by the subscript on the predicate.
+The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come from the preposition \tit{ana} `on'.
 
-
-
-
-
-In the remainder of this section I show evidence for the claim that there is case competition going on in headless relatives. I illustrate that relative pronouns can take the case assigned from within the relative clause or the case assigned from outside the relative clause (the main clause).
-
-Consider the example in \ref{ex:gothicaccdat}. In this example there is a subscript on a preposition, indicating that this is the element that assigns the case. The relative clause is placed between square brackets. The preposition \tit{ana} `on' is part of the relative clause, and it assigns dative case. The predicate \tit{ushafjands} `picking up' is not part of the relative clause but it is situated in the main clause. This predicate assigns accusative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the preposition \tit{ana} `on', which is part of the relative clause.
-
-\exg. ushafjands ana þamm -ei lag\\
- {picking up}\scsub{[acc]} \tcol{DG}{on\scsub{[dat]}} \tcol{DG}{what.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{lay}\\
+\exg. ushafjands \tcol{DG}{ana} \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{lag}\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
 
-The conclusion that follows is that in headless relatives the relative pronoun can take the case assigned within the relative clause. At this point it remains unclear what happened to the accusative case which is assigned by the predicate in the main clause.
+The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
 
-Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed between square brackets. The predicate \tit{qiþiþ} `say' is part of the relative clause, and assigns accusative case. The predicate \tit{taujau} `do' is not part of the relative clause but it is situated in the main clause. This predicate assign dative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the predicate \tit{taujau} `do', which is part of the main clause.
+Now consider the example in \ref{ex:gothicdatacc}. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in gray.
+The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript.
+The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript.
+The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only come from the predicate \tit{taujau} `do'.
 
-\exg. hva nu wileiþ ei taujau þamm -ei qiþiþ þiudan Iudaie?\\
- what now want that do\scsub{[dat]} who.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{say\scsub{[acc]}} \tcol{DG}{king} \tcol{DG}{{of Jews}}\\
+\exg. hva nu wileiþ ei taujau þamm \tcol{DG}{-ei} \tcol{DG}{qiþiþ} \tcol{DG}{þiudan} \tcol{DG}{Iudaie}?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatacc}
 
-The conclusion that follows is that in headless relatives the relative pronoun takes the case assigned in the main clause. Again, it is unclear at this point what happened to the accusative case, which is now assigned by the predicate in the relative clause.
+The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal accusative case.
 
-The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives is sensitive to cases assigned from within the relative clause and from the main clause. In these examples, accusative and dative were assigned, and it both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
+The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
+In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case.
+For \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in.
+In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
+
+Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it gray as well, as shown in \ref{ex:gothicaccdat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothicdatacc}. When the internal and external case are the same, I.., as shown in \ref{ex:gothicaccacc}.
 
 
 \section{The content of this dissertation}
